# mimiLLM

./: .gitattributes  .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  PROGRESS.md  README.md  README_RU.md  chat.py  environment-windows.yml  environment.yml  evaluate.py  pyproject.toml  setup.py  train.py  train_pipeline.py
configs/: debug.json  mixed_demo.json  qa_demo.json  tiny.json
cpp/: backend_api.cpp  backend_api.h  kernels.cpp  kernels.h  thread_pool.cpp  thread_pool.h
cuda/: kernels.cu
data/: README.md  README_RU.md  qa_seed.jsonl  train.txt  validation.txt
data/text/train/: english.txt  (+1 more)
examples/: create_model.py  train_model.py  use_weights.py
examples/staged_training/: README.md  dialogue_eval.json  model.json  pipeline.json  pretrain.json  sft.json
mimillm/: __init__.py  api.py  attention.py  audit.py  backend.py  backend_cpp.py  backend_cuda.py  backend_python.py  checkpoint.py  dataset.py  diagnostics.py  evaluation.py  generation.py  hailo.py  hybrid.py  layers.py  losses.py  module.py  optim.py  parameter.py  pipeline.py  safetensors.py  tensor.py  tokenizer.py  training.py  transformer.py  utils.py
minillm/: __init__.py  autograd.py  backend.py  backend_cpp.py  backend_python.py  checkpoint.py  dataset.py  generation.py  layers.py  optim.py  tensor.py  transformer.py  utils.py
scripts/: chat.sh  setup_conda.ps1  setup_conda.sh  setup_raspberry_pi.sh  train_debug.sh  train_mixed.sh  train_qa.sh
tests/: test_audit.py  test_autograd.py  test_backend_selection.py  test_checkpoint.py  test_cpp_backend.py  test_cuda_backend.py  test_dataset.py  test_evaluation.py  test_generation.py  test_hailo.py  test_hybrid.py  test_layers.py  test_optimizer.py  test_pipeline.py  test_public_api.py  test_safetensors.py  test_sft_acceptance.py  test_tensor.py  test_tokenizer.py  test_training_benchmark.py  test_training_smoke.py  test_transformer.py  test_utils.py
tools/: benchmark.py  benchmark_hybrid.py  benchmark_training.py  build_backend.py  diagnose_qa_overfit.py  hailo_info.py  inspect_checkpoint.py  make_dataset.py  memory_regression.py  package_release.py
(+4 files in other folders)
