[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mimillm"
version = "0.10.3"
description = "An educational, dependency-free toolkit for building decoder-only language models"
readme = "README.md"
requires-python = ">=3.12"
license = {file = "LICENSE"}
authors = [{name = "mimiLLM contributors"}]
keywords = ["machine-learning", "transformer", "language-model", "autograd", "cuda", "gpu", "education"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Education",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: C++",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = []

[project.scripts]
mimillm-train = "mimillm.training:main"
mimillm-train-pipeline = "mimillm.pipeline:main"
mimillm-check-sft = "mimillm.diagnostics:main"

[tool.setuptools]
packages = ["mimillm"]

[tool.setuptools.package-data]
mimillm = ["py.typed", "_native/*"]
